# applied-ai

./: README.md  example.sync.ipynb  example.sync.py  pyproject.toml
