[tool.poetry]
name = "applied-ai"
version = "0.1.0"
description = ""
authors = ["AndreasPB <andreas.p.brodersen@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.22.2"
pandas = "^1.4.0"
matplotlib = "^3.5.1"
jupyter = "^1.0.0"
jupyter-ascending = "^0.1.23"
tqdm = "^4.62.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
